--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "repos",
   "description": "Pull down a list of GitHub repositories for the specified user or org, and save to a local JSON file.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/jonschlinkert/repos",
   "author": {
     "name": "Jon Schlinkert",
@@ -30,7 +30,7 @@
     "verb"
   ],
   "bin": {
-    "align": "./bin/align"
+    "repos": "./bin/repos"
   },
   "main": "index.js",
   "engines": {
