--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "repos",
   "description": "Pull down a list of GitHub repositories for the specified user or org, and save to a local JSON file.",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "homepage": "https://github.com/jonschlinkert/repos",
   "author": {
     "name": "Jon Schlinkert",
@@ -30,23 +30,23 @@
     "verb"
   ],
   "bin": {
-    "repos": "./bin/repos"
+    "repos": "./bin/repos.js"
   },
   "main": "index.js",
   "engines": {
     "node": ">=0.8"
   },
   "scripts": {
-    "test": "mocha -R test"
+    "test": "mocha -R spec"
   },
   "devDependencies": {
     "verb": "~0.2.0"
   },
   "dependencies": {
-    "request": "~2.34.0",
-    "fs-utils": "~0.3.9",
+    "fs-utils": "~0.4.1",
     "lodash": "~2.4.1",
     "minimist": "0.0.8",
-    "verbalize": "~0.1.1"
+    "request": "~2.34.0",
+    "verbalize": "~0.1.2"
   }
 }
