--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 sudo: false
+os:
+  - linux
+  - osx
 language: node_js
 node_js:
-  - 'node'
+  - node
+  - '8'
+  - '7'
   - '6'
   - '5'
   - '4'
-  - '0.12'
