--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "repos",
-  "description": "Methods for working with the GitHub Repositories API. Node.js/JavaScript",
+  "description": "List all repositories for one or more users or orgs.",
   "version": "0.1.5",
   "homepage": "https://github.com/jonschlinkert/repos",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
@@ -15,20 +15,26 @@
   ],
   "main": "index.js",
   "bin": {
-    "repos": "bin/repos.js"
+    "repos": "bin/cli.js"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
     "test": "mocha"
   },
   "dependencies": {
-    "btoa": "^1.1.2",
-    "github-base": "^0.5.1"
+    "github-base": "^0.5.4",
+    "isobject": "^3.0.1",
+    "log-ok": "^0.1.1",
+    "minimist": "^1.2.0",
+    "p-reduce": "^1.0.0",
+    "write-json": "^2.0.0"
   },
   "devDependencies": {
-    "mocha": "^2.2.5"
+    "data-store": "^1.0.0",
+    "mocha": "^3.5.0",
+    "gulp-format-md": "^1.0.0"
   },
   "keywords": [
     "all",
@@ -62,12 +68,24 @@
     "unstar"
   ],
   "verb": {
+    "toc": false,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
     "related": {
       "list": [
         "gists",
         "github-base",
-        "github-contributors"
+        "github-contributors",
+        "topics"
       ]
+    },
+    "lint": {
+      "reflinks": true
     }
   }
 }
